
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int LOG_DEBUG ;
 int print_securities () ;
 int test_condition_test_ac_power () ;
 int test_condition_test_architecture () ;
 int test_condition_test_control_group_controller () ;
 int test_condition_test_cpus () ;
 int test_condition_test_group () ;
 int test_condition_test_host () ;
 int test_condition_test_kernel_command_line () ;
 int test_condition_test_kernel_version () ;
 int test_condition_test_memory () ;
 int test_condition_test_null () ;
 int test_condition_test_path () ;
 int test_condition_test_security () ;
 int test_condition_test_user () ;
 int test_condition_test_virtualization () ;
 int test_setup_logging (int ) ;

int main(int argc, char *argv[]) {
        test_setup_logging(LOG_DEBUG);

        test_condition_test_path();
        test_condition_test_ac_power();
        test_condition_test_host();
        test_condition_test_architecture();
        test_condition_test_kernel_command_line();
        test_condition_test_kernel_version();
        test_condition_test_null();
        test_condition_test_security();
        print_securities();
        test_condition_test_virtualization();
        test_condition_test_user();
        test_condition_test_group();
        test_condition_test_control_group_controller();
        test_condition_test_cpus();
        test_condition_test_memory();

        return 0;
}
